2007-01-02  Damien Sandras  <dsandras@gnome.org>

	* src/components/bonobo.cpp: Show the main window before presenting
	the alert explaining that Ekiga is already running. (Fixes #342560)
	
2007-01-02  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/manager.cpp: Use next available port in the UDP
	ports range for SIP when the main listen port is already in use.

2007-01-02  Damien Sandras  <dsandras@gnome.org>

	* lib/gui/gmconnectbutton.c: Dropped GTK_WIDGET_UNSET_FLAGS
	(GTK_WIDGET (cb), GTK_CAN_FOCUS) for the connect button. Fixes
	#380040.

2006-12-31  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/manager.cpp: Ignore RTP packets only if the stream was 
	established with a different codec than the one Ekiga is receiving.
	Fixes #389988.

2006-12-31  Damien Sandras  <dsandras@gnome.org>

	* ChangeLog, src/gui/druid.cpp:
	Synced interesting changes with the TRUNK.

2006-12-31  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/urlhandler.cpp, src/gui/addressbook.cpp, 
	src/gui/preferences.cpp, src/gui/config.cpp, src/gui/druid.cpp,
	src/gui/contacts.cpp, src/gui/chat.cpp, src/gui/callshistory.cpp,
	src/gui/main.cpp, ChangeLog, NEWS:
	Synced interesting changes with the TRUNK.

2006-12-26  Julien Puydt  <jpuydt@free.fr>

	* src/gui/druid.cpp: Protected access to the kind of net store, to
	avoid crashes. Fixes #389775.

2006-12-25  Jan Schampera <jan.schampera@unix.net>

	* src/gui/contacts.cpp:
	Fix unneeded assertion.

	* src/gui/callshistory.cpp:
	Add "chat" to the context menu (#358830), also some icons.

2006-12-24  Jan Schampera <jan.schampera@unix.net>

	* src/gui/main.cpp:
	Let the shortcut Ctrl-L focus+mark the URL bar entry.
	Implements ENH #342241.

2006-12-07  Jan Schampera <jan.schampera@unix.net>

	* src/gui/main.cpp: Fix crash on closing main window (#382366)

2006-11-28  Damien Sandras  <dsandras@gnome.org>

	* lib/gui/gmroster.cpp: Fixed possible crash.

2006-11-28  Damien Sandras  <dsandras@gnome.org>
